src/objects/Int_Party__c.object
<CustomObject>
    <description>Int Party</description>
    <fields>
        <fullName>Applicable_Default_Reason_Code__c</fullName>
        <description>Applicable Default Reason Code</description>
        <label>Applicable Default Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basel_Classification_Amount__c</fullName>
        <description>Basel Classification Amount</description>
        <label>Basel Classification Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basel_Classification__c</fullName>
        <description>Basel Classification</description>
        <label>Basel Classification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consolidated_Turnover_Amount__c</fullName>
        <description>Consolidated Turnover Amount</description>
        <label>Consolidated Turnover Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Determination_Code__c</fullName>
        <description>Default Determination Code</description>
        <label>Default Determination Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delinquency_Reason_Code__c</fullName>
        <description>Delinquency Reason Code</description>
        <label>Delinquency Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Indicator__c</fullName>
        <description>Individual Indicator</description>
        <label>Individual Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <description>Industry Code</description>
        <label>Industry Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Type_Code__c</fullName>
        <description>Industry Type Code</description>
        <label>Industry Type Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Size__c</fullName>
        <description>LE Size</description>
        <label>LE Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Form_Code__c</fullName>
        <description>Legal Form Code</description>
        <label>Legal Form Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Proceedings_Initiation_Date__c</fullName>
        <description>Legal Proceedings Initiation  Date</description>
        <label>Legal Proceedings Initiation  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Proceedings_Status_Code__c</fullName>
        <description>Legal Proceedings Status Code</description>
        <label>Legal Proceedings Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Quality_Classification_Code__c</fullName>
        <description>Loan Quality Classification Code</description>
        <label>Loan Quality Classification Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_LookupType__c</fullName>
        <description>PD LookupType</description>
        <label>PD LookupType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Percentage__c</fullName>
        <description>PD Percentage</description>
        <label>PD Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PD_Rating_Model__c</fullName>
        <description>PD Rating Model</description>
        <label>PD Rating Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Rating_Score_Date__c</fullName>
        <description>PD Rating Score Date</description>
        <label>PD Rating Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PD_Rating_Score__c</fullName>
        <description>PD Rating Score</description>
        <label>PD Rating Score</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Review_Date__c</fullName>
        <description>PD Review Date</description>
        <label>PD Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Party_Contract_Name__c</fullName>
        <label>Party Contract Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <description>Party Name</description>
        <label>Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <description>Party Number</description>
        <label>Party Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Party_Source_System__c</fullName>
        <description>Party Source System</description>
        <label>Party Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rabobank_Risk_Rating__c</fullName>
        <description>Rabobank Risk Rating</description>
        <label>Rabobank Risk Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Int Party</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Party_Name__c</columns>
        <columns>Party_Number__c</columns>
        <columns>Individual_Indicator__c</columns>
        <columns>Committed__c</columns>
        <columns>PD_Rating_Score__c</columns>
        <columns>PD_Percentage__c</columns>
        <columns>Party_Contract_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAR-{0000000000}</displayFormat>
        <label>Party Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>